crates/excelx-derive/tests/ui/unsupported_type.rs
use excelx_derive::ExcelRow;

#[derive(ExcelRow)]
struct UnsupportedType {
    #[excel(header = "Tags", order = 1)]
    tags: Vec<String>,
}

fn main() {}
